[gd_scene load_steps=17 format=3 uid="uid://6xlg12rx25sb"]

[ext_resource type="FontFile" uid="uid://dtscou1ounj4r" path="res://fonts/VonwaonBitmap-16px.ttf" id="1_6fgsk"]
[ext_resource type="Script" uid="uid://d06obt4g5w6dg" path="res://scripts/settingsMan.gd" id="1_wgsic"]
[ext_resource type="FontFile" uid="uid://dv0vr6hwtx8w3" path="res://fonts/fusion/fusion-pixel-12px-proportional-latin.ttf" id="2_cqjpv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cqjpv"]

[sub_resource type="Theme" id="Theme_0jauj"]
Button/colors/font_pressed_color = Color(1, 1, 1, 1)
Button/styles/hover_pressed = null

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wgsic"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0jauj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ibxyu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_f8jbt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yv8vt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_b75yy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8317w"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_y7qjk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jxh1y"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_j55pi"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jvywt"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wgsic")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.000158856, 0.0405339, 0.251275, 1)

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_cqjpv")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
alignment = 2

[node name="ColorRect" type="ColorRect" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
color = Color(0.0431373, 0.0431373, 0.639216, 1)

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_6fgsk")
theme_override_font_sizes/font_size = 32
text = "[GENERAL]         ADVANCED           PTBIOS 1109a"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_cqjpv")
theme_override_font_sizes/font_size = 24
text = "GENERAL SETTINGS"
horizontal_alignment = 1

[node name="VSYNC" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_0jauj")
theme_override_fonts/font = ExtResource("2_cqjpv")
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = SubResource("StyleBoxEmpty_wgsic")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_0jauj")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ibxyu")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_f8jbt")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_yv8vt")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_b75yy")
theme_override_styles/hover = SubResource("StyleBoxEmpty_8317w")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_y7qjk")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_jxh1y")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_j55pi")
theme_override_styles/normal = SubResource("StyleBoxEmpty_jvywt")
toggle_mode = true
text = "VSYNC [OPTION]"
flat = true

[node name="FULLSCREEN" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_0jauj")
theme_override_fonts/font = ExtResource("2_cqjpv")
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = SubResource("StyleBoxEmpty_wgsic")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_0jauj")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ibxyu")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_f8jbt")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_yv8vt")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_b75yy")
theme_override_styles/hover = SubResource("StyleBoxEmpty_8317w")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_y7qjk")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_jxh1y")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_j55pi")
theme_override_styles/normal = SubResource("StyleBoxEmpty_jvywt")
toggle_mode = true
text = "FULLSCREEN [OPTION]"
flat = true

[node name="Label2" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_cqjpv")
theme_override_font_sizes/font_size = 24
text = "
MOVEMENT CONTROLS"
horizontal_alignment = 1

[node name="UP" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_0jauj")
theme_override_fonts/font = ExtResource("2_cqjpv")
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = SubResource("StyleBoxEmpty_wgsic")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_0jauj")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ibxyu")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_f8jbt")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_yv8vt")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_b75yy")
theme_override_styles/hover = SubResource("StyleBoxEmpty_8317w")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_y7qjk")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_jxh1y")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_j55pi")
theme_override_styles/normal = SubResource("StyleBoxEmpty_jvywt")
toggle_mode = true
text = "UP [W KEY]"
flat = true

[node name="LEFT" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_0jauj")
theme_override_fonts/font = ExtResource("2_cqjpv")
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = SubResource("StyleBoxEmpty_wgsic")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_0jauj")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ibxyu")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_f8jbt")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_yv8vt")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_b75yy")
theme_override_styles/hover = SubResource("StyleBoxEmpty_8317w")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_y7qjk")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_jxh1y")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_j55pi")
theme_override_styles/normal = SubResource("StyleBoxEmpty_jvywt")
toggle_mode = true
text = "LEFT [A KEY]"
flat = true

[node name="DOWN" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_0jauj")
theme_override_fonts/font = ExtResource("2_cqjpv")
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = SubResource("StyleBoxEmpty_wgsic")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_0jauj")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ibxyu")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_f8jbt")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_yv8vt")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_b75yy")
theme_override_styles/hover = SubResource("StyleBoxEmpty_8317w")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_y7qjk")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_jxh1y")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_j55pi")
theme_override_styles/normal = SubResource("StyleBoxEmpty_jvywt")
toggle_mode = true
text = "DOWN [S KEY]"
flat = true

[node name="RIGHT" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_0jauj")
theme_override_fonts/font = ExtResource("2_cqjpv")
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = SubResource("StyleBoxEmpty_wgsic")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_0jauj")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ibxyu")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_f8jbt")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_yv8vt")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_b75yy")
theme_override_styles/hover = SubResource("StyleBoxEmpty_8317w")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_y7qjk")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_jxh1y")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_j55pi")
theme_override_styles/normal = SubResource("StyleBoxEmpty_jvywt")
toggle_mode = true
text = "RIGHT [D KEY]"
flat = true

[node name="INTERACT" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_0jauj")
theme_override_fonts/font = ExtResource("2_cqjpv")
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = SubResource("StyleBoxEmpty_wgsic")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_0jauj")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ibxyu")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_f8jbt")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_yv8vt")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_b75yy")
theme_override_styles/hover = SubResource("StyleBoxEmpty_8317w")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_y7qjk")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_jxh1y")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_j55pi")
theme_override_styles/normal = SubResource("StyleBoxEmpty_jvywt")
toggle_mode = true
text = "INTERACT [SPCBAR KEY]"
flat = true

[node name="ColorRect" type="ColorRect" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.116796, 0.0419063, 0.70287, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/HBoxContainer/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 7.0
grow_horizontal = 2
grow_vertical = 2

[node name="INFOTITLE" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer/ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(0.1, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_6fgsk")
theme_override_font_sizes/font_size = 32
text = "Information Title"
horizontal_alignment = 1
autowrap_mode = 3

[node name="INFODESC" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer/ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(0.1, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_6fgsk")
theme_override_font_sizes/font_size = 32
text = "Information Description"
autowrap_mode = 3

[node name="bottom text" type="Node" parent="PanelContainer/VBoxContainer"]

[node name="ColorRect" type="ColorRect" parent="PanelContainer/VBoxContainer/bottom text"]
custom_minimum_size = Vector2(0, 70)
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -60.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/bottom text"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -68.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
theme_override_constants/separation = -2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/bottom text/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_6fgsk")
theme_override_font_sizes/font_size = 32
text = "/\\ \\/ Select Item   <-  -> Configure  [ESC] Exit BIOS "
horizontal_alignment = 1
vertical_alignment = 2

[node name="Label2" type="Label" parent="PanelContainer/VBoxContainer/bottom text/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_6fgsk")
theme_override_font_sizes/font_size = 32
text = "[SPACEBAR] Save Options (Unsaved)"
horizontal_alignment = 1
vertical_alignment = 2

[connection signal="mouse_entered" from="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/VSYNC" to="." method="_on_vsync_mouse_entered"]
[connection signal="toggled" from="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/VSYNC" to="." method="_on_vsync_toggled"]
[connection signal="mouse_entered" from="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/FULLSCREEN" to="." method="_on_fullscreen_mouse_entered"]
[connection signal="toggled" from="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/FULLSCREEN" to="." method="_on_fullscreen_toggled"]
[connection signal="mouse_entered" from="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/UP" to="." method="_on_up_mouse_entered"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/UP" to="." method="_on_up_pressed"]
[connection signal="mouse_entered" from="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/LEFT" to="." method="_on_left_mouse_entered"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/LEFT" to="." method="_on_left_pressed"]
[connection signal="mouse_entered" from="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/DOWN" to="." method="_on_down_mouse_entered"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/DOWN" to="." method="_on_down_pressed"]
[connection signal="mouse_entered" from="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/RIGHT" to="." method="_on_right_mouse_entered"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/RIGHT" to="." method="_on_right_pressed"]
[connection signal="mouse_entered" from="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/INTERACT" to="." method="_on_interact_mouse_entered"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/INTERACT" to="." method="_on_interact_pressed"]
